# ColorMap

./: CMakeLists.txt  ColorMap.cpp  ColorMap.h  MeshGridBuilder.cpp  MeshGridBuilder.h  README.md
AzadehsFilesNov132018/ColorMap/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeLists_.txt  ColorMapBuilder.cpp  ColorMapBuilder.h  MeshGridBuilder.cpp  ZERO_CHECK.vcxproj
AzadehsFilesNov132018/ColorMap/ColorMap.dir/Debug/ColorMap.tlog/: CL.write.1.tlog
AzadehsFilesNov132018/ColorMap/ColorMap.dir/Release/ColorMap.tlog/: link.command.1.tlog
AzadehsFilesNov132018/ColorMap/Release/: ColorMap.exp  ColorMap.lib
AzadehsFilesNov132018/ColorMap/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog
AzadehsFilesNov132018/ColorMap/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.write.1.tlog
AzadehsFilesNov132018/ColorMap_readFromCSVfile/: ColorMap.vcxproj  ColorMap.vcxproj.filters  ColorMapBuilder - Copy.h  ColorMapBuilder.cpp  ColorMapBuilder.h  MeshGridBuilder - Copy.h  ZERO_CHECK.vcxproj.filters
AzadehsFilesNov132018/ColorMap_readFromCSVfile/ColorMap.dir/Debug/: CL.read.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
AzadehsFilesNov132018/ColorMap_readFromCSVfile/ColorMap.dir/Release/ColorMap.tlog/: ColorMap.write.1u.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog
AzadehsFilesNov132018/ColorMap_readFromCSVfile/Debug/: ColorMap.exp
AzadehsFilesNov132018/ColorMap_readFromCSVfile/Release/: ColorMap.exp
AzadehsFilesNov132018/ColorMap_readFromCSVfile/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
AzadehsFilesNov132018/ColorMap_readFromCSVfile/Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog
AzadehsFilesNov132018/ColorMap_readFromCSVfile/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog
old/OriginalNov132018/ColorMap/: ALL_BUILD.vcxproj  ColorMap.vcxproj  cmake_install.cmake
old/OriginalNov132018/ColorMap/ColorMap.dir/Debug/ColorMap.tlog/: CL.command.1.tlog  ColorMap.lastbuildstate
old/OriginalNov132018/ColorMap/ColorMap.dir/Release/ColorMap.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColorMap.write.1u.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.read.1.tlog  link.write.1.tlog
old/OriginalNov132018/ColorMap/Debug/: ColorMap.exp
old/OriginalNov132018/ColorMap/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
old/OriginalNov132018/ColorMap_readFromCSVfile/: CMakeCache.txt  ColorMap.sln  ColorMapBuilder - Copy.cpp  MeshGridBuilder - Copy.cpp
old/OriginalNov132018/ColorMap_readFromCSVfile/ColorMap.dir/Debug/: CL.write.1.tlog  ColorMap.lastbuildstate
old/OriginalNov132018/ColorMap_readFromCSVfile/ColorMap.dir/Release/: ColorMap.lastbuildstate
old/OriginalNov132018/ColorMap_readFromCSVfile/ColorMap.dir/Release/ColorMap.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.write.1.tlog
old/OriginalNov132018/ColorMap_readFromCSVfile/Debug/: ColorMap.lib
old/OriginalNov132018/ColorMap_readFromCSVfile/Win32/Debug/ZERO_CHECK/: custombuild.write.1.tlog
old/OriginalNov132018/ColorMap_readFromCSVfile/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
old/OriginalNov132018/plugin/colorMap/: ColorMap.info
